--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
         <img src="https://i.ibb.co/GvGfpsCv/Ho-ng.jpg" alt="QR" width="80">
       </div>
     </div>
-    <h1 id="title">Huỳnh Tấn Hoàng - NCV Card</h1>
-    <div class="subtitle">Kế toán Kimberry</div>
-    <a href="tel:0867141877" class="phone-button">📞 0867 141 877</a>
+    <h1 id="title">Võ Ngọc Nhân</h1>
+    <div class="subtitle">Overseas Development</div>
+    <a href="tel:+84 903 453 808" class="phone-button">📞 +84 903 453 808</a>
 
     <div class="share-buttons">
       <div onclick="navigator.share ? navigator.share({ title: document.title, url: location.href }) : alert('Trình duyệt không hỗ trợ')">🔗 Chia sẻ</div>
@@ -216,21 +216,16 @@
     <div class="video-button" id="consultButton">Đăng Ký Tư Vấn</div>
 
     <div class="info" id="description">
-      * Đã tư vấn và triển khai marketing online cho hơn 500 doanh nghiệp trong lĩnh vực nông nghiệp.<br>
-      * Kinh nghiệm về website, Google Ads, Google Shopping, YouTube SEO.<br>
-      * Đồng sở hữu các thương hiệu: Sàn TMĐT luu.vn, học từ chuyên gia msvui.com, hệ thống TTS ttso.vn, Giải pháp vận tải.
+      * Có 1 năm kinh nghiệm ở vị trí Sales Overseas trong ngành logistics, phụ trách thị trường Trung Quốc, Ấn Độ và các tuyến khác.<br>
+      * Công việc bao gồm tìm kiếm khách hàng quốc tế, báo giá dịch vụ FCL/LCL, air freight, theo dõi lô hàng và phối hợp với bộ phận chứng từ – hiện trường để đảm bảo giao hàng đúng tiến độ.<br>
     </div>
 
     <div class="role-section">
-      <div class="role-item"><img src="https://i.ibb.co/VY0kfHdv/Logo-Nhon-My-700x700-2-150x150.png"><div class="role-text" id="role1">Tổng giám đốc: công ty Kimxin Việt Nam</div><span>🔗</span></div>
-      <div class="role-item"><img src="https://i.ibb.co/Fkwjsw18/logo-ttso-v3-4-150x150.png"><div class="role-text" id="role2">Cố vấn chiến lược</div><span>🔗</span></div>
-      <div class="role-item"><img src="https://i.ibb.co/Myj0W4Br/logo-ncv-tron-v2-1-150x150.png"><div class="role-text" id="role3">IT công ty Long Hoàng</div><span>🔗</span></div>
-      <div class="role-item"><img src="https://i.ibb.co/9m2XRcKS/Logo-Luu-Vuong-1-150x150.png"><div class="role-text" id="role4">Đồng hành cùng: Thực chiến tại doanh nghiệp</div><span>🔗</span></div>
-      <div class="role-item"><img src="https://i.ibb.co/h1g15RgC/logo-ACU-11-150x150.png"><div class="role-text" id="role5">Chuyên gia: Vì bạn xứng đáng</div><span>🔗</span></div>
+      <div class="role-item"><img src="https://i.ibb.co/VY0kfHdv/Logo-Nhon-My-700x700-2-150x150.png"><div class="role-text" id="role1">Sales Overseas – Công ty Long Hoàng Logistics</div><span>🔗</span></div>
     </div>
 
     <div class="icon-links">
-      <a href="https://zalo.me/0867141877" target="_blank">
+      <a href="https://zalo.me/0903453808" target="_blank">
         <img src="https://i.ibb.co/d4nRhVQV/Zalo.png" alt="Zalo" border="0"/>
         <span>Zalo</span>
       </a>
