--- a/index.html
+++ b/index.html
@@ -253,15 +253,15 @@
         <img src="https://i.ibb.co/VY01h09d/Profile.png" alt="Profile" border="0"/>
         <span>Profile</span>
       </a>
-      <a href="https://facebook.com/hoang.kimberry" target="_blank">
+      <a href="https://www.facebook.com/share/1SwQWcGDNp/" target="_blank">
         <img src="https://i.ibb.co/67VF7N5R/Facebook.png" alt="Facebook" border="0"/>
         <span>Facebook</span>
       </a>
-      <a href="https://www.tiktok.com/@hoangkimberry" target="_blank">
+      <a href="https://www.tiktok.com/@jydn111_?_t=ZS-8ycWPn5Mth2&_r=1" target="_blank">
         <img src="https://i.ibb.co/cStFGVqG/Tiktok.png" alt="Tiktok" border="0"/>
         <span>TikTok</span>
       </a>
-      <a href="https://www.instagram.com/hoangkimberry" target="_blank">
+      <a href="https://www.instagram.com/jden0_111?igsh=MjYxbnVxbDRsOTh1" target="_blank">
         <img src="https://i.ibb.co/39gCrw9n/Instagram.png" alt="Instagram" border="0"/>
         <span>Instagram</span>
       </a>
@@ -285,31 +285,23 @@
   <script>
     const translations = {
       vi: {
-        title: "Huỳnh Tấn Hoàng - NCV Card",
-        description: `* Đã tư vấn và triển khai marketing online cho hơn 500 doanh nghiệp trong lĩnh vực nông nghiệp.<br>
-        * Kinh nghiệm về website, Google Ads, Google Shopping, YouTube SEO.<br>
-        * Đồng sở hữu các thương hiệu: Sàn TMĐT luu.vn, học từ chuyên gia msvui.com, hệ thống TTS ttso.vn, Giải pháp vận tải.`,
+        title: "Võ Ngọc Nhân",
+        description: `
+        * Có 1 năm kinh nghiệm ở vị trí Sales Overseas trong ngành logistics, phụ trách thị trường Trung Quốc, Ấn Độ và các tuyến khác.<br>
+      * Công việc bao gồm tìm kiếm khách hàng quốc tế, báo giá dịch vụ FCL/LCL, air freight, theo dõi lô hàng và phối hợp với bộ phận chứng từ – hiện trường để đảm bảo giao hàng đúng tiến độ.`,
         consult: "Đăng Ký Tư Vấn",
         roles: [
-          "Tổng giám đốc: công ty Kimxin Việt Nam",
-          "Cố vấn chiến lược",
-          "IT công ty Long Hoàng",
-          "Đồng hành cùng: Thực chiến tại doanh nghiệp",
-          "Chuyên gia: Vì bạn xứng đáng"
+          "Sales Overseas – Công ty Long Hoàng Logistics"
         ]
       },
       en: {
-        title: "Huynh Tan Hoang - NCV Card",
-        description: `* Consulted and implemented online marketing for over 500 agricultural businesses.<br>
-        * Experienced in websites, Google Ads, Google Shopping, YouTube SEO.<br>
-        * Co-owner of brands: luu.vn, msvui.com, ttso.vn, logistics solutions.`,
+        title: "Mr. Jayden Vo",
+        description: `
+        * One year of experience as an Overseas Sales Representative in the logistics industry, responsible for the Chinese, Indian, and other trade lanes.<br>
+        * Responsibilities included sourcing international clients, quoting FCL/LCL and air freight services, tracking shipments, and coordinating with the documentation and operations teams to ensure on-time delivery.`,
         consult: "Register for Consultation",
         roles: [
-          "CEO: Kimxin Vietnam Company",
-          "Strategic Advisor",
-          "IT at Long Hoang Company",
-          "Partner: Practical Business Training",
-          "Expert: Because You Deserve It"
+          "Sales Overseas – Long Hoang Logistics Company"
         ]
       }
     };
@@ -328,15 +320,15 @@
       const blob = new Blob([`
 BEGIN:VCARD
 VERSION:3.0
-FN:Huỳnh Tấn Hoàng
-TEL:0867141877
-EMAIL:hoang@example.com
+FN:Võ Ngọc Nhân
+TEL:0903453808
+EMAIL:Jayden@longhoanglogistics.com
 END:VCARD
       `], { type: 'text/vcard' });
 
       const link = document.createElement('a');
       link.href = URL.createObjectURL(blob);
-      link.download = 'HuynhTanHoang.vcf';
+      link.download = 'Vongocnhan.vcf';
       link.click();
     }
   </script>
