--- a/index.html
+++ b/index.html
@@ -230,15 +230,15 @@
         <span>Zalo</span>
       </a>
       <a href="https://wa.me/84979394389" target="_blank">
-        <img src="https://i.ibb.co/F4T66yKh/Jayden-Whatapps.jpg" alt="Whatsapp" border="0"/>
+        <img src="https://i.ibb.co/XxqRB3Qg/Whatsapp.png" alt="Whatsapp" border="0"/>
         <span>WhatsApp</span>
       </a>
       <a href="https://weixin.qq.com/" target="_blank">
-        <img src="https://i.ibb.co/CsQwSST7/Jayden-Wechat.jpg" alt="Wechat" border="0"/>
+        <img src="https://i.ibb.co/Zz41gSrk/Wechat.png" alt="Wechat" border="0"/>
         <span>WeChat ID</span>
       </a>
       <a href="mailto:hoang@example.com" target="_blank">
-        <img src="https://i.ibb.co/nqyMXyNM/Email.png" alt="Email" border="0"/>
+        <a href="https://ibb.co/6JFyqqfP"><img src="https://i.ibb.co/6JFyqqfP/Jayden-Wechat.jpg" alt="Jayden-Wechat" border="0"></a>
         <span>Email</span>
       </a>
       <a href="https://goo.gl/maps/your-location" target="_blank">
@@ -269,9 +269,9 @@
         <img src="https://i.ibb.co/KpRgSv04/Momo.png" alt="Momo" border="0"/>
         <span>Momo</span>
       </a>
-      <a href="https://techcombank.com" target="_blank">
-        <img src="https://i.ibb.co/zVjxK9Jw/Jayden-tcb.jpg" alt="Techcombank" border="0"/>
-        <span>TCB</span>
+      <a href="https://vcb.com.vn" target="_blank">
+        <img src="https://i.ibb.co/WNDG8rdx/Vietcombank.png" alt="Vietcombank" border="0"/>
+        <span>VCB</span>
       </a>
     </div>
 
