--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <img src="https://i.ibb.co/d4nRhVQV/Zalo.png" alt="Zalo" border="0"/>
         <span>Zalo</span>
       </a>
-      <a href="https://ibb.co/r2rkkzmQ"><img src="https://i.ibb.co/r2rkkzmQ/Jayden-Whatapps.jpg" target="_blank">
+      <a href="https://ibb.co/r2rkkzmQ"> target="_blank">
         <img src="https://i.ibb.co/XxqRB3Qg/Whatsapp.png" alt="Whatsapp" border="0"/>
         <span>WhatsApp</span>
       </a>
