--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <img src="https://i.ibb.co/XxqRB3Qg/Whatsapp.png" alt="Whatsapp" border="0"/>
         <span>WhatsApp</span>
       </a>
-      <a href="https://weixin.qq.com/" target="_blank">
+      <a href="https://i.ibb.co/CsQwSST7/Jayden-Wechat.jpg" target="_blank">
         <img src="https://i.ibb.co/Zz41gSrk/Wechat.png" alt="Wechat" border="0"/>
         <span>WeChat ID</span>
       </a>
@@ -253,15 +253,15 @@
         <img src="https://i.ibb.co/VY01h09d/Profile.png" alt="Profile" border="0"/>
         <span>Profile</span>
       </a>
-      <a href="https://facebook.com/hoang.kimberry" target="_blank">
+      <a href="https://www.facebook.com/share/1SwQWcGDNp/" target="_blank">
         <img src="https://i.ibb.co/67VF7N5R/Facebook.png" alt="Facebook" border="0"/>
         <span>Facebook</span>
       </a>
-      <a href="https://www.tiktok.com/@hoangkimberry" target="_blank">
+      <a href="https://www.tiktok.com/@jydn111_?_t=ZS-8ycWPn5Mth2&_r=1" target="_blank">
         <img src="https://i.ibb.co/cStFGVqG/Tiktok.png" alt="Tiktok" border="0"/>
         <span>TikTok</span>
       </a>
-      <a href="https://www.instagram.com/hoangkimberry" target="_blank">
+      <a href="https://www.instagram.com/jden0_111?igsh=MjYxbnVxbDRsOTh1" target="_blank">
         <img src="https://i.ibb.co/39gCrw9n/Instagram.png" alt="Instagram" border="0"/>
         <span>Instagram</span>
       </a>
@@ -269,13 +269,9 @@
         <img src="https://i.ibb.co/KpRgSv04/Momo.png" alt="Momo" border="0"/>
         <span>Momo</span>
       </a>
-      <a href="https://vcb.com.vn" target="_blank">
-        <img src="https://i.ibb.co/WNDG8rdx/Vietcombank.png" alt="Vietcombank" border="0"/>
-        <span>VCB</span>
-      </a>
-      <a href="https://acb.com.vn" target="_blank">
-        <img src="https://i.ibb.co/wFM08ty5/Acb.png" alt="Acb" border="0"/>
-        <span>ACB</span>
+      <a href="https://i.ibb.co/zVjxK9Jw/Jayden-tcb.jpg" target="_blank">
+        <img src="https://i.ibb.co/FktVzW2z/Tcb.png" alt="Techcombank" border="0"/>
+        <span>TCB</span>
       </a>
     </div>
 
