--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     </div>
 
     <div class="icon-links">
-      <a href="https://zalo.me/0867141877" target="_blank">
+      <a href="https://zalo.me/0903453808" target="_blank">
         <img src="https://i.ibb.co/d4nRhVQV/Zalo.png" alt="Zalo" border="0"/>
         <span>Zalo</span>
       </a>
@@ -237,7 +237,7 @@
         <img src="https://i.ibb.co/Zz41gSrk/Wechat.png" alt="Wechat" border="0"/>
         <span>WeChat ID</span>
       </a>
-      <a href="mailto:hoang@example.com" target="_blank">
+      <a href="mailto:jayden@longhoanglogistics.com" target="_blank">
         <img src="https://i.ibb.co/nqyMXyNM/Email.png" alt="Email" border="0"/>
         <span>Email</span>
       </a>
@@ -245,11 +245,11 @@
         <img src="https://i.ibb.co/7dTZHSwV/Map.png" alt="Map" border="0"/>
         <span>Địa Chỉ</span>
       </a>
-      <a href="https://www.kimberry.vn" target="_blank">
+      <a href="https://www.longhoanglogistics.com" target="_blank">
         <img src="https://i.ibb.co/Gf69QR4R/Website.png" alt="Website" border="0"/>
         <span>Website</span>
       </a>
-      <a href="https://about.me/hoangkimberry" target="_blank">
+      <a href="https://drive.google.com/file/d/1wyPCBaCLTiUx3aWMwIX3X1WryfnTL-Lp/view?usp=drive_link" target="_blank">
         <img src="https://i.ibb.co/VY01h09d/Profile.png" alt="Profile" border="0"/>
         <span>Profile</span>
       </a>
