--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
       const blob = new Blob([`
 BEGIN:VCARD
 VERSION:3.0
-FN:Võ Ngọc Nhân
+FN:Ngoc Nhan
 TEL:0903453808
 EMAIL:Jayden@longhoanglogistics.com
 END:VCARD
