--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
   <div class="container">
     <div class="avatar-box">
-      <img src="https://i.ibb.co/9L8fZLZ/cef712d527fc15809c8b19049b8851b32b6c29dbe7820f4b57ec929dd2d9e3aa.png" alt="Avatar" class="avatar">
+      <img src="<a href="https://ibb.co/mV65T2YP"><img src="https://i.ibb.co/mV65T2YP/Jayden.jpg" alt="Avatar" class="avatar">
       <div class="qr-top">
         <img src="https://i.ibb.co/GvGfpsCv/Ho-ng.jpg" alt="QR" width="80">
       </div>
