--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
   <div class="container">
     <div class="avatar-box">
-      <img src="<a href="https://ibb.co/mV65T2YP"><img src="https://i.ibb.co/mV65T2YP/Jayden.jpg" alt="Avatar" class="avatar">
+      <img src="https://i.ibb.co/gLzZ9fXc/Jayden.jpghttps://i.ibb.co/gLzZ9fXc/Jayden.jpg" alt="Avatar" class="avatar">
       <div class="qr-top">
         <img src="https://i.ibb.co/GvGfpsCv/Ho-ng.jpg" alt="QR" width="80">
       </div>
