--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <div class="avatar-box">
       <img src="https://i.ibb.co/pvFjbyzC/Jayden.jpg" alt="Avatar" class="avatar">
       <div class="qr-top">
-        <img src="https://i.ibb.co/GvGfpsCv/Ho-ng.jpg" alt="QR" width="80">
+        <img src="https://i.ibb.co/1G4bjXQB/Jayden.jpg" alt="QR" width="80">
       </div>
     </div>
     <h1 id="title">Võ Ngọc Nhân</h1>
