--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <img src="https://i.ibb.co/Zz41gSrk/Wechat.png" alt="Wechat" border="0"/>
         <span>WeChat ID</span>
       </a>
-      <a href="mailto:jayden@longhoanglogistics.com" target="_blank">
+      <a href="mailto:jacky@longhoanglogistics.com" target="_blank">
         <img src="https://i.ibb.co/nqyMXyNM/Email.png" alt="Email" border="0"/>
         <span>Email</span>
       </a>
