--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <img src="https://i.ibb.co/nqyMXyNM/Email.png" alt="Email" border="0"/>
         <span>Email</span>
       </a>
-      <a href="https://goo.gl/maps/your-location" target="_blank">
+      <a href="https://maps.app.goo.gl/ZSVFYotTCuGWNQmW8" target="_blank">
         <img src="https://i.ibb.co/7dTZHSwV/Map.png" alt="Map" border="0"/>
         <span>Địa Chỉ</span>
       </a>
