--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
   <div class="container">
     <div class="avatar-box">
-      <img src="https://i.ibb.co/pvFjbyzC/Jayden.jpg" alt="Avatar" class="avatar">
+      <img src="https://i.ibb.co/sSsbjNq/Jayden.jpg" alt="Avatar" class="avatar">
       <div class="qr-top">
         <img src="https://i.ibb.co/hJ8jKMK2/Jayden.jpg" alt="QR" width="80">
       </div>
