--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     </div>
 
     <div class="icon-links">
-      <a href="https://zalo.me/0903 453 808" target="_blank"><img src="https://i.ibb.co/d4nRhVQV/Zalo.png"/><span>Zalo</span></a>
+      <a href="https://zalo.me/0903453808" target="_blank"><img src="https://i.ibb.co/d4nRhVQV/Zalo.png"/><span>Zalo</span></a>
       <a href="https://i.ibb.co/F4T66yKh/Jayden-Whatapps.jpg" target="_blank"><img src="https://i.ibb.co/XxqRB3Qg/Whatsapp.png"/><span>WhatsApp</span></a>
       <a href="https://i.ibb.co/CsQwSST7/Jayden-Wechat.jpg"><img src="https://i.ibb.co/Zz41gSrk/Wechat.png"/><span>WeChat</span></a>
       <a href="mailto:Jacky@longhoanglogistics.com"><img src="https://i.ibb.co/nqyMXyNM/Email.png"/><span>Email</span></a>
@@ -263,7 +263,6 @@
       <a href="https://www.tiktok.com/@jydn111_?_t=ZS-8ycWPn5Mth2&_r=1" target="_blank"><img src="https://i.ibb.co/cStFGVqG/Tiktok.png"/><span>TikTok</span></a>
       <a href="https://www.instagram.com/jden0_111?igsh=MjYxbnVxbDRsOTh1" target="_blank"><img src="https://i.ibb.co/39gCrw9n/Instagram.png"/><span>Instagram</span></a>
       <a href="https://nhantien.momo.vn/" target="_blank"><img src="https://i.ibb.co/KpRgSv04/Momo.png"/><span>Momo</span></a>
-      <a href=""><img src="https://i.ibb.co/WNDG8rdx/Vietcombank.png"/><span>VCB</span></a>
       <a href="https://i.ibb.co/zVjxK9Jw/Jayden-tcb.jpg"><img src="https://i.ibb.co/FktVzW2z/Tcb.png"/><span>TCB</span></a>
     </div>
   </div>
