--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
       "subtitle": "Overseas Sales",
       "description": [
         "Có kinh nghiệm ở vị trí Sales Overseas trong ngành logistics, phụ trách thị trường Trung Quốc, Ấn Độ và các tuyến khác.<br>",
-        "Công việc bao gồm tìm kiếm khách hàng quốc tế, báo giá dịch vụ FCL/LCL, air freight, theo dõi lô hàng và phối hợp với bộ phận chứng từ – hiện trường để đảm bảo giao hàng đúng tiến độ.",
-        ""
+        "Công việc bao gồm tìm kiếm khách hàng quốc tế, báo giá dịch vụ FCL/LCL, air freight, theo dõi lô hàng và phối hợp với bộ phận chứng từ – hiện trường để đảm bảo giao hàng đúng tiến độ."
       ],
       "consultButton": "Đăng Ký Tư Vấn",
       "roles": [
@@ -173,7 +172,7 @@
       }
     },
     "en": {
-      "title": "Võ Ngọc Nhân",
+      "title": "Jayden",
       "subtitle": "Overseas Sales",
       "description": [
         "Experience as an Overseas Sales Representative in the logistics industry, responsible for the Chinese, Indian, and other trade lanes.<br>",
