--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       "title": "Võ Ngọc Nhân",
       "subtitle": "Overseas Sales",
       "description": [
-        "Có kinh nghiệm ở vị trí Sales Overseas trong ngành logistics, phụ trách thị trường Trung Quốc, Ấn Độ và các tuyến khác.<br>",
+        "Có kinh nghiệm ở vị trí Sales Overseas trong ngành logistics, phụ trách thị trường Trung Quốc, Ấn Độ và các tuyến khác.",
         "Công việc bao gồm tìm kiếm khách hàng quốc tế, báo giá dịch vụ FCL/LCL, air freight, theo dõi lô hàng và phối hợp với bộ phận chứng từ – hiện trường để đảm bảo giao hàng đúng tiến độ."
       ],
       "consultButton": "Đăng Ký Tư Vấn",
@@ -172,10 +172,10 @@
       }
     },
     "en": {
-      "title": "Jayden",
+      "title": "Mr. Jayden",
       "subtitle": "Overseas Sales",
       "description": [
-        "Experience as an Overseas Sales Representative in the logistics industry, responsible for the Chinese, Indian, and other trade lanes.<br>",
+        "Experience as an Overseas Sales Representative in the logistics industry, responsible for the Chinese, Indian, and other trade lanes.",
         "Responsibilities included sourcing international clients, quoting FCL/LCL and air freight services, tracking shipments, and coordinating with the documentation and operations teams to ensure on-time delivery."
       ],
       "consultButton": "Register for Consultation",
